<resources>
    <string name="app_name">MessengerApp</string>
    <string name="message_edit_text_hint">Написать...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channels_title_navigation_bottom">Channels</string>
    <string name="people_title_navigation_bottom">People</string>
    <string name="profile_title_navigation_bottom">Profile</string>
    <string name="search_edit_text_hint">Search...</string>
    <string name="search_people_hint">Users...</string>
    <string name="number_of_messages_string">%s mes</string>
    <string name="stream_title">#%s</string>
    <string name="subscribed_title">Subscribed</string>
    <string name="all_streams_title">All streams</string>
    <string name="topic_title">Topic: #%s</string>
    <string name="profile_title">Profile</string>
    <string name="log_out_button_text">Log out</string>
    <string name="online_status">online</string>
    <string name="offline_status">offline</string>
    <string name="in_a_meeting">In a meeting</string>
    <string name="load_messages_error_dialog_title">Ошибка загрузки</string>
    <string name="load_messages_error_dialog_text">Не удалось загрузить сообщения, проверьте свое интернет-соединение</string>
    <string name="common_error_title">Ошибка</string>
    <string name="change_reaction_error_dialog_text">Не удалось изменить вашу реакцию на сообщение. Проверьте свое интернет-соединение</string>
    <string name="load_streams_error_dialog_title">Ошибка загрузки</string>
    <string name="load_streams_error_dialog_text">Не удалось загрузить список стримов. Провереть свое интернет-соединение</string>
    <string name="load_people_error_dialog_title">Ошибка загрузки</string>
    <string name="load_people_error_dialog_text">Не удалось загрузить список пользователей. Провереть свое интернет-соединение</string>
    <string name="message_send_error_dialog_title">Ошибка отправления сообщения</string>
    <string name="message_send_error_dialog_text">При отправлении сообщения возникла ошибка. Проверьте свое интернет-соединение</string>
    <string name="chat_loading_error_text">Не удалось загрузить сообщения</string>
    <string name="main_loading_text">Loading data...</string>
    <string name="empty_subscribed_streams_list">Вы не подписаны на стримы</string>
    <string name="meesage_all_streams_list_empty">Нет стримов</string>
    <string name="topic_name_for_stream_chat">#%s</string>
    <string name="topic_delimiter">Topic: #%s</string>
    <string name="create_stream_dialog_header">Создание стрима</string>
    <string name="create_stream_edit_text_description">Название стрима:</string>
    <string name="create_stream_edit_text_hint">Stream name</string>
    <string name="description_edit_text_hint">Stream description</string>
    <string name="description_edit_text_description">Описание:</string>
    <string name="create_stream_button_text">Создать</string>
    <string name="create_stream_without_name_warning">Введите название стрима</string>
    <string name="create_stream_error_title">Ошибка</string>
    <string name="create_already_exists_stream_error_text">Невозможно создать стрим, так как стрим %s уже существует</string>
    <string name="create_stream_error_text">Не удалось создать стрим %s</string>
    <string name="stream_created_successful_message">Стрим %s создан</string>
    <string name="add_reaction_button_text">Добавить реакцию</string>
    <string name="delete_message_button_text">Удалить сообщение</string>
    <string name="edit_message__button_text">Редактировать сообщение</string>
    <string name="change_topic_button_text">Изменить топик</string>
    <string name="copy_message_button_text">Скопировать сообщение</string>
    <string name="delete_message_error_text">Не удалось удалить сообщение. Провереть свое интернет-соединение</string>
    <string name="delete_reaction_error_text">Не удалось удалить реакцию с сообщения. Провереть свое интернет-соединение</string>
    <string name="add_reaction_error_text">Не удалось добавить реакцию на сообщение. Провереть свое интернет-соединение</string>
    <string name="dont_have_permissions_for_delete_error_text">Не удалось удалить сообщение, у вас недостаточно прав</string>
    <string name="common_error_text">Возникла ошибка. Провереть свое интернет-соединение</string>
    <string name="change_topic_dialog_title">Изменение топика</string>
    <string name="topic_name_edit_text_description">Название топика</string>
    <string name="topic_name_edit_text_hint">Topic name</string>
    <string name="send_message_to_new_topic">Отправить</string>
    <string name="message_after_copy_message_text">Сообщение скопировано</string>
    <string name="empty_topic_name_warning">Укажите название топика</string>
    <string name="load_streams_error_message">Не удалось загрузить список стримов</string>
    <string name="cant_get_streams_from_server_message">Не удалось загрузить данные с сервера</string>
    <string name="empty_stream_list_message">Тут нет ни одного стрима :с</string>
    <string name="empty_people_list_warning">Тут нет ни одного человека...\nУ тебя нет друзей</string>
    <string name="cant_load_people">Не удалось загрузить пользователей</string>
    <string name="cant_load_messages_list">Не удалось загрузить список сообщений</string>
    <string name="empty_message_list_warning">Тут пока не написали, будь первым!</string>
    <string name="empty_message_edittext_warning">Введите сообщение</string>
    <string name="blank_topik_warning">Укажите название топика</string>
</resources>