<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="20dp"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/errorDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_topic_dialog_title"
        android:textSize="24sp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/channels_separator_color"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_name_edit_text_description"
        android:textColor="@color/text_color"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/topicNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:padding="10dp"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/text_color"
        android:hint="@string/topic_name_edit_text_hint"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeTopicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:letterSpacing="0.1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:text="@string/send_message_to_new_topic"
        app:backgroundTint="@color/aquamarine"
        android:textColor="@color/text_color"/>

</LinearLayout>