<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.PeopleFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/peopleAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/search_channels_app_bar"
        android:theme="@style/AppBarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchPeopleEditText"
                style="@style/SearchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="36dp"
                android:background="@null"
                android:hint="@string/search_people_hint"
                app:layout_constraintEnd_toStartOf="@id/searchPeopleIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/searchPeopleIcon"
                style="@style/SearchIcon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peopleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/peopleAppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/emptyPeopleListImage"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/peopleAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_simon"
        app:tint="@color/text_color"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/emptyPeopleListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dp"
        android:textAlignment="center"
        android:text="@string/empty_people_list_warning"
        app:layout_constraintTop_toBottomOf="@id/emptyPeopleListImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/errorPeopleImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/peopleErrorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_cloud_off_24"
        app:tint="@color/text_color"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/peopleErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dp"
        android:textAlignment="center"
        android:text="@string/cant_load_people"
        app:layout_constraintTop_toBottomOf="@id/peopleAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reloadPeopleButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_reload_48"
        app:layout_constraintTop_toBottomOf="@id/peopleErrorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/add_button_icon_color"
        app:fabCustomSize="48dp"
        app:maxImageSize="28dp"
        app:backgroundTint="@color/aquamarine"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>